--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,96 +1,83 @@
-<!--Section: Contact v.2-->
 <section class="mb-4">
-
-  <!--Section heading-->
-  <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-  <!--Section description-->
-  <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-      a matter of hours to help you.</p>
-
+  <h2 class="h1-responsive font-weight-bold my-4">Contact me</h2>
+  <p class="w-responsive mx-auto mb-5">
+    Hey whats up there! Hows it going? Got a question or comment for me? Please feel free to reach out. I will try to get back to you as soon as possible.
+  </p>
   <div class="row">
 
-      <!--Grid column-->
-      <div class="col-md-9 mb-md-0 mb-5">
-          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
-              <!--Grid row-->
-              <div class="row">
-
-                  <!--Grid column-->
-                  <div class="col-md-6">
-                      <div class="md-form mb-0">
-                          <input type="text" id="name" name="name" class="form-control">
-                          <label for="name" class="">Your name</label>
-                      </div>
-                  </div>
-                  <!--Grid column-->
-
-                  <!--Grid column-->
-                  <div class="col-md-6">
-                      <div class="md-form mb-0">
-                          <input type="text" id="email" name="email" class="form-control">
-                          <label for="email" class="">Your email</label>
-                      </div>
-                  </div>
-                  <!--Grid column-->
-
-              </div>
-              <!--Grid row-->
-
-              <!--Grid row-->
-              <div class="row">
-                  <div class="col-md-12">
-                      <div class="md-form mb-0">
-                          <input type="text" id="subject" name="subject" class="form-control">
-                          <label for="subject" class="">Subject</label>
-                      </div>
-                  </div>
-              </div>
-              <!--Grid row-->
-
-              <!--Grid row-->
-              <div class="row">
-
-                  <!--Grid column-->
-                  <div class="col-md-12">
-
-                      <div class="md-form">
-                          <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                          <label for="message">Your message</label>
-                      </div>
-
-                  </div>
-              </div>
-              <!--Grid row-->
-
-          </form>
-
-          <div class="text-center text-md-left">
-              <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+    <div class="col-md-8 mb-md-0 mb-5">
+      <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+        <div class="row mb-4">
+          <div class="col-md-6 mb-4 mb-md-0">
+            <div class="md-form mb-0 form-floating">
+              <input type="text" id="name" name="name" class="form-control" required formControlName="name">
+              <label for="name" class="">Your name</label>
+            </div>
+            <div *ngIf="contactForm.get('name')?.touched && contactForm.get('name')?.hasError('required')" class="text-danger">
+              Name is required.
+            </div>
           </div>
-          <div class="status"></div>
-      </div>
-      <!--Grid column-->
+          <div class="col-md-6">
+            <div class="md-form mb-0 form-floating">
+              <input type="text" id="email" name="email" class="form-control" required formControlName="email">
+              <label for="email" class="">Your email</label>
+            </div>
+            <div *ngIf="contactForm.get('email')?.touched && contactForm.get('email')?.hasError('required')" class="text-danger">
+              Email is required.
+            </div>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col-md-12">
+            <div class="md-form mb-0 form-floating">
+              <input type="text" id="subject" name="subject" class="form-control" required formControlName="subject">
+              <label for="subject" class="">Subject</label>
+            </div>
+            <div *ngIf="contactForm.get('subject')?.touched && contactForm.get('subject')?.hasError('required')" class="text-danger">
+              Subject is required.
+            </div>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col-md-12">
+            <div class="md-form form-floating">
+              <textarea type="text" id="message" name="message" style="min-height: 200px;" class="form-control md-textarea" required formControlName="message"></textarea>
+              <label for="message">Your message</label>
+            </div>
+            <div *ngIf="contactForm.get('message')?.touched && contactForm.get('message')?.hasError('required')" class="text-danger">
+              Message is required.
+            </div>
+          </div>
+        </div>
+        <div class="col-12 mt-0 mb-0">
+          <div *ngIf="showSuccessBanner" class="alert alert-success" role="alert">
+            Your message has been sent successfully.
+          </div>
+          <div *ngIf="showErrorBanner" class="alert alert-danger" role="alert">
+            An error occurred while sending your message. Please try again later.
+          </div>
+        </div>
+        <div class="text-end text-md-end">
+          <button class="btn {{contactForm.invalid ? 'btn-secondary' : 'btn-primary'}}" type="submit" [disabled]="contactForm.invalid">Submit</button>
+        </div>
+      </form>
+    </div>
 
-      <!--Grid column-->
-      <div class="col-md-3 text-center">
-          <ul class="list-unstyled mb-0">
-              <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                  <p>San Francisco, CA 94126, USA</p>
-              </li>
+    <div class="col-md-4 text-center">
+      <ul class="list-unstyled mb-0">
+        <li><i class="fas fa-map-marker-alt fa-2x"></i>
+          <p>Manteca, CA 95336, USA</p>
+        </li>
 
-              <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                  <p>+ 01 234 567 89</p>
-              </li>
+        <li><i class="fas fa-phone mt-4 fa-2x"></i>
+          <p>+1 (408) 466 1505</p>
+        </li>
 
-              <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                  <p>contact@mdbootstrap.com</p>
-              </li>
-          </ul>
-      </div>
-      <!--Grid column-->
+        <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+          <p>me@chrishacia.com</p>
+        </li>
+      </ul>
+    </div>
 
   </div>
-
 </section>
-<!--Section: Contact v.2-->
