--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,1 +1,13 @@
-<p>resume works!</p>
+<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Light card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+
+<h3><span class="badge bg-dark text-light p-2 mt-2 mb-2"><i class="bi bi-tools"></i></span> Skills</h3>
+<div class="col">
+  <span class="badge rounded-pill bg-dark text-light p-2 me-1 mb-1" *ngFor="let skill of skills">{{skill}}</span>
+</div>
+<hr class="hr hr-blurry" />
