--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,8 @@
 <div class="d-flex flex-row">
-  <div class="flex-grow-1 flex-shrink-1 p-2">
-    Column 2
+  <div class="mx-1 mb-4 p-0">
+    <app-resume-widget></app-resume-widget>
   </div>
-
-  <div class="flex-grow-1 flex-shrink-1 p-2" style="max-width: 33%;">
-
+  <div class="mx-2 mb-4 p-0">
     <app-git-commits-widget></app-git-commits-widget>
-
   </div>
 </div>
