--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,13 +1,30 @@
-<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
-  <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+<div class="row">
+  <div class="col">
+    <h3><span class="badge bg-icon-badge text-dark p-2 mt-2 mb-2"><i class="bi bi-tools"></i></span> Skills</h3>
+  </div>
+  <div class="col text-end">
+    <a href="/assets/resume/Christopher_Hacia_Resume.pdf" target="_blank" class="btn btn-outline-dark btn-sm mb-2"><i class="bi bi-file-earmark-pdf"></i> Download PDF</a>
   </div>
 </div>
-
-<h3><span class="badge bg-dark text-light p-2 mt-2 mb-2"><i class="bi bi-tools"></i></span> Skills</h3>
-<div class="col">
+<div class="col text-end">
   <span class="badge rounded-pill bg-dark text-light p-2 me-1 mb-1" *ngFor="let skill of skills">{{skill}}</span>
 </div>
+
 <hr class="hr hr-blurry" />
+
+<h3><span class="badge bg-icon-badge text-dark p-2 mt-2 mb-2"><i class="bi bi-person-workspace"></i></span> Career History</h3>
+<div class="row mt-2">
+
+  <div class="card m-auto mb-4 p-0" style="max-width: 90%;" *ngFor="let job of careerHistory.career_history">
+    <div class="card-header pt-2 pb-0"><h4>{{job.company}}</h4></div>
+    <div class="card-body">
+      <h5 class="card-title">{{job.title}}</h5>
+      <h6 class="card-subtitle text-muted mb-1">{{job.location}}</h6>
+      <h6 class="card-subtitle text-muted">{{job.duration}}</h6>
+      <ul>
+        <li class="card-text" *ngFor="let resp of job.responsibilities">{{resp}}</li>
+      </ul>
+    </div>
+  </div>
+
+</div>
