fix: home wrapping break point in smaller screens

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-row">
-  <div class="mx-1 mb-4 p-0">
+<div class="d-flex flex-row flex-wrap">
+  <div class="mx-1 mb-2 p-0">
     <app-resume-widget></app-resume-widget>
   </div>
-  <div class="mx-2 mb-4 p-0">
+  <div class="mx-1 mb-2 p-0">
     <app-git-commits-widget></app-git-commits-widget>
   </div>
 </div>
