--- a/src/app/resume-widget/resume-widget.component.html
+++ b/src/app/resume-widget/resume-widget.component.html
@@ -10,7 +10,7 @@
     <h6 class="card-subtitle text-muted mb-1">{{currentJob.location}}</h6>
     <h6 class="card-subtitle text-muted">{{currentJob.duration}}</h6>
     <ul>
-      <li class="card-text" *ngFor="let resp of currentJob.responsibilities">{{resp}}</li>
+      <li class="card-text d-none" *ngFor="let resp of currentJob.responsibilities">{{resp}}</li>
     </ul>
   </div>
 </div>
