--- a/src/app/git-commits-widget/git-commits-widget.component.html
+++ b/src/app/git-commits-widget/git-commits-widget.component.html
@@ -1,21 +1,31 @@
-<h5><i class="bi bi-github"></i> Recent Project Updates!</h5>
-<div class="accordion accordion-flush">
-  <div class="accordion-item" *ngFor="let repo of repos">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#' + repo.accordianId" aria-expanded="false" [attr.aria-controls]="repo.accordianId">
-        {{ repo.name }}
-      </button>
-    </h2>
-    <div id="{{ repo.accordianId }}" class="accordion-collapse collapse" [attr.data-bs-parent]="'#' + repo.accordianId">
-      <div class="accordion-body">
-        <p>{{ repo.desc }}</p>
-        Recent Commits:
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let commit of repo.commits">
-            <span class="badge bg-secondary">{{ !commit.commit.author.date ? 'date missing' :  commit.commit.author.date.split('T')[0]}}</span> {{ commit.commit.message }}
-          </li>
-        </ul>
+<div class="card m-auto mb-4 p-0">
+  <div class="card-header pt-2 pb-0">
+    <h4>
+      <i class="bi bi-github"></i> Recent Updates!
+    </h4>
+  </div>
+  <div class="card-body">
+
+    <div class="accordion accordion-flush">
+      <div class="accordion-item" *ngFor="let repo of repos">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#' + repo.accordianId" aria-expanded="false" [attr.aria-controls]="repo.accordianId">
+            {{ repo.name }}
+          </button>
+        </h2>
+        <div id="{{ repo.accordianId }}" class="accordion-collapse collapse" [attr.data-bs-parent]="'#' + repo.accordianId">
+          <div class="accordion-body">
+            <p>{{ repo.desc }}</p>
+            Recent Commits:
+            <ul>
+              <li class="card-text" *ngFor="let commit of repo.commits">
+                <span class="badge bg-secondary">{{ !commit.commit.author.date ? 'date missing' :  commit.commit.author.date.split('T')[0]}}</span> {{ commit.commit.message }}
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
+
   </div>
 </div>
