initial projects page, minor ui changes throughout pages

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
       </a>
     </li>
     <li>
-      <a [routerLink]="['/blog']" routerLinkActive="active" class="nav-link py-3 border-bottom rounded-0" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Blog" data-bs-original-title="Blog">
+      <a [routerLink]="['/blog']" routerLinkActive="active" class="nav-link py-3 border-bottom rounded-0 d-none" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Blog" data-bs-original-title="Blog">
         <i class="bi bi-book-half"></i>
       </a>
     </li>
@@ -135,7 +135,7 @@
       </a>
     </li>
     <li>
-      <a [routerLink]="['/blog']" routerLinkActive="active" class="nav-link link-body-emphasis">
+      <a [routerLink]="['/blog']" routerLinkActive="active" class="nav-link link-body-emphasis d-none">
         <i class="bi bi-book-half"></i>
         Blog
       </a>
