--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,5 @@
-<h1>Hello!</h1>
+<h2 class="h1-responsive font-weight-bold my-4"><i class="bi bi-info-square"></i> About</h2>
+
 <p>I'm delighted to have you here and share my journey as a software engineer, web developer, gamer, photographer, and proud father. This digital space is where I can showcase my diverse passions and talents, and I'm thrilled to take you along on this adventure.</p>
 
 <p>As a software engineer, I thrive on solving complex problems and building innovative solutions. From designing efficient algorithms to developing robust software architectures, I enjoy the process of creating clean and scalable code that powers cutting-edge applications. Technology is my playground, and I'm constantly exploring new frameworks and languages to stay ahead of the curve.</p>
