--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,3 @@
-<p>blog works!</p>
+<h2 class="h1-responsive font-weight-bold my-4"><i class="bi bi-book-half"></i> Blog</h2>
+
+<p>This is a feature I am not ready to build. This page serves as a reminder that I would eventually like to setup my own little journal, or blog of sorts.</p>
