--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,12 +1,8 @@
-<div class="row">
-  <div class="col">
-    <h3><span class="badge bg-icon-badge text-dark p-2 mt-2 mb-2"><i class="bi bi-tools"></i></span> Skills</h3>
-  </div>
-  <div class="col text-end">
-    <a href="/assets/resume/Christopher_Hacia_Resume.pdf" target="_blank" class="btn btn-outline-dark btn-sm mb-2"><i class="bi bi-file-earmark-pdf"></i> Download PDF</a>
-  </div>
-</div>
-<div class="col text-end">
+<h2 class="h1-responsive font-weight-bold my-1"><i class="bi bi-file-earmark-person"></i> Resume</h2>
+<a href="/assets/resume/Christopher_Hacia_Resume.pdf" target="_blank" class="btn btn-outline-dark btn-sm my-2"><i class="bi bi-file-earmark-pdf"></i> Download PDF</a>
+
+<h3><span class="badge bg-icon-badge text-dark p-2 mt-2 mb-2"><i class="bi bi-tools"></i></span> Skills</h3>
+<div class="col text-center">
   <span class="badge rounded-pill bg-dark text-light p-2 me-1 mb-1" *ngFor="let skill of skills">{{skill}}</span>
 </div>
 
