updating projects page

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -24,4 +24,14 @@
     </div>
   </div>
 
+  <div class="card m-2" style="width: 18rem;">
+    <img src="/assets/screens/adhddev_simple_chat.png" class="card-img-top" alt="ADHD Dev Simple Chat">
+    <div class="card-body">
+      <h5 class="card-title">ADHD Dev Simple Chat</h5>
+      <p class="card-text">This project demonstrates how to create a simple chatbot using HTML, CSS, and JavaScript.</p>
+      <a href="https://github.com/adhddev/simple-chatbot/" target="_blank" class="btn btn-primary"><i class="bi bi-github"></i> GitHub</a>
+      <a href="https://adhddev.github.io/simple-chatbot/" target="_blank" class="btn btn-dark mx-2"><i class="bi bi-globe2"></i> Live</a>
+    </div>
+  </div>
+
 </div>
