project page update, git stream update

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -34,4 +34,16 @@
     </div>
   </div>
 
+  <div class="card m-2" style="width: 18rem;">
+    <img src="/assets/screens/blankpage.org.png" class="card-img-top" alt="ADHD Dev Simple Chat">
+    <div class="card-body">
+      <h5 class="card-title">Blank Page</h5>
+      <p class="card-text">
+        Just a small, real-time collaborative text editor. I made this to learn more about websockets and real-time communication. It's a work in progress, but it's a fun little project.
+      </p>
+      <a href="https://github.com/chrishacia/blankpage.org" target="_blank" class="btn btn-primary"><i class="bi bi-github"></i> GitHub</a>
+      <a href="https://blankpage.org" target="_blank" class="btn btn-dark mx-2"><i class="bi bi-globe2"></i> Live</a>
+    </div>
+  </div>
+
 </div>
